Fix label alignement on Safari
Safari infer different values for the `vertical-align` property of
`inline-block` element. See this answer for more details:

  http://stackoverflow.com/a/4828136/1652064

Fixes #177

--- a/client/components/cards/labels.styl
+++ b/client/components/cards/labels.styl
@@ -8,11 +8,13 @@
   font-weight: 700
   font-size: 13px
   margin-right: 4px
+  margin-bottom: 5px
   padding: 3px 8px
   max-width: 100%
   min-width: 8px
   overflow: ellipsis
   height: 18px
+  vertical-align: bottom
 
   &:hover
     color: white
